--- a/user_plans.html
+++ b/user_plans.html
@@ -9,7 +9,6 @@
 </head>
 <body>
 
-    
     <header>
         <div class="sub_header">
             <div>
@@ -97,7 +96,9 @@
 
         <div class="mainContent">
 
-            <div class="filterPlans"></div>
+            <div class="filterPlans">
+                <button class="filter_button"> Filter <i class="fa fa-bars" aria-hidden="true"></i> </button>
+            </div>
 
             <div class="plans">
 
