end_userPlans_structure

--- a/index.html
+++ b/index.html
@@ -31,15 +31,14 @@
                 </div>
 
                 <div class="login_container">
-                    <form action="">
                         <div class="inputFields">
                             <div class="input-icons"> 
-                                <i class="fa fa-user icon"> </i> 
+                                <i class="fa fa-envelope icon" aria-hidden="true"></i>
                                 <input class="input-field" type="text" placeholder="Your Email"> 
                             </div> 
     
                             <div class="input-icons"> 
-                                <i class="fa fa-user icon"> </i> 
+                                <i class="fa fa-key icon"> </i> 
                                 <input class="input-field" type="text" placeholder="Your Password"> 
                             </div> 
                         </div>
@@ -54,17 +53,11 @@
                             </div>
                             <button> Sign In </button>
                         </div>
-                    </form>
                 </div>
 
                 <div class="register_container">
                     <form action="">
                         <div class="inputFields">
-                            <div class="input-icons"> 
-                                <i class="fa fa-user icon"> </i> 
-                                <input class="input-field" type="text" placeholder="Username"> 
-                            </div> 
-    
                             <div class="input-icons"> 
                                 <i class="fa fa-envelope icon" aria-hidden="true"></i>
                                 <input class="input-field" type="text" placeholder="Email"> 
